--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Hello World</h1>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>金燕团队 - 陕西师范大学</title><link href=static/css/app.f7d51899064b071eb9cdd5e2f00d5cd9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.e3fd9c014dce4a497302.js></script><script type=text/javascript src=static/js/vendor.05baa617c8f87a7aa8b8.js></script><script type=text/javascript src=static/js/app.5921d321655f81386e95.js></script></body></html>
